--- a/programme.html
+++ b/programme.html
@@ -101,7 +101,7 @@ margin: 50px auto;
     <input type="text" id="titre" required  placeholder="Titre..">
 
     <label for="description">Description</label>
-    <textarea id="Description" required placeholder="description"></textarea>
+    <textarea id="description" required placeholder="description"></textarea>
 
     <label for="duree">Durée</label>
     <input type="text" id="duree" required / placeholder="en semaines ou mois">
@@ -110,10 +110,12 @@ margin: 50px auto;
     <input type="text" id="competences" required />
 
     <button type="submit">Ajouter</button>
+    
   </form>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
   <script src="./programme.js"></script>
+  s
 
 </body>
 </html>
