--- a/programme.html
+++ b/programme.html
@@ -73,7 +73,10 @@ margin: 50px auto;
       cursor: pointer;
     }
     button:hover { background: #8EB486; }
-
+span{
+  border: 2px solid black;
+  padding: 6px;
+}
 
   </style>
     <div class="navigateur">
